Made changes in Home Section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
+
   <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <header class="navbar navbar-expand-lg fixed-top d-flex align-items-center">
       <div class="container">
-        <a href="#" class="navbar-brand">Developer <span>X.</span></a>
+        <p class="navbar-brand fw-bold">
+          IT 110 - <span>Personal Website</span>
+        </p>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,27 +38,42 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
           </ul>
-          <a href="#" class="btn btn-primary ms-3">Contact me</a>
+          <a href="#" class="h-btn ms-3 text-decoration-none">Contact me</a>
         </div>
       </div>
     </header>
 
-    <section class="hero d-flex align-items-center min-vh-100 bg-light" id="home">
-      <div class="container text-center" data-aos="fade-in">
-        <h4>Hi there,</h4>
-        <h1>I'm <span>Yssah Barcial</span></h1>
+    <section class="hero d-flex align-items-center min-vh-100 ms-4" id="home">
+      <div class="main-content ms-5" data-aos="fade-in">
+        <h4 class="fw-bold pb-2">Hi there,</h4>
+        <h1 class="fw-bold">I'm <span>Yssah Barcial</span></h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto optio
           sed cupiditate accusantium, repellendus sit animi rerum.
         </p>
-        <div class="d-flex justify-content-center gap-3">
-          <a href="#" class="btn btn-outline-primary">Hire me</a>
-          <a href="#" class="btn btn-primary">Download CV</a>
+        <div class="social mb-5">
+          <a href="#"><i class="ri-facebook-fill"></i></a>
+          <a href="#"><i class="ri-instagram-fill"></i></a>
+          <a href="#"><i class="ri-twitter-fill"></i></a>
+          <a href="#"><i class="ri-youtube-fill"></i></a>
+        </div>
+
+        <div class="main-btn">
+          <a href="#" class="btn">Hire me</a>
+          <a href="#" class="btn btn2">Download CV</a>
         </div>
       </div>
     </section>
@@ -69,14 +87,24 @@
           <div class="col-lg-6" data-aos="zoom-in-up">
             <h2>I am Product <span>Designer</span> & Web Developer</h2>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Experience: <strong>12 Years</strong></li>
+              <li class="list-group-item">
+                Experience: <strong>12 Years</strong>
+              </li>
               <li class="list-group-item">
                 Specialty: <strong>Product Designer, Developer</strong>
               </li>
-              <li class="list-group-item">Address: <strong>Quarry, Brgy. 9, Cabadbaran City</strong></li>
-              <li class="list-group-item">Email: <strong>yjbarcial@gmail.com</strong></li>
-              <li class="list-group-item">Phone: <strong>+63 956 382 9900</strong></li>
-              <li class="list-group-item">Freelance: <strong>available</strong></li>
+              <li class="list-group-item">
+                Address: <strong>Quarry, Brgy. 9, Cabadbaran City</strong>
+              </li>
+              <li class="list-group-item">
+                Email: <strong>yjbarcial@gmail.com</strong>
+              </li>
+              <li class="list-group-item">
+                Phone: <strong>+63 956 382 9900</strong>
+              </li>
+              <li class="list-group-item">
+                Freelance: <strong>available</strong>
+              </li>
             </ul>
             <a href="#" class="btn btn-primary mt-3">View All Projects</a>
           </div>
@@ -84,7 +112,7 @@
       </div>
     </section>
 
-    <section class="services py-5 bg-light" id="services">
+    <section class="services py-5" id="services">
       <div class="container">
         <div class="text-center mb-5" data-aos="fade-down">
           <h2>My <span>Services</span></h2>
@@ -108,7 +136,8 @@
               <div class="card-body">
                 <h5 class="card-title">Web Development</h5>
                 <p class="card-text">
-                  Perspiciatis numquam facere et ipsum. Aliquam in ipsam officiis ducimus!
+                  Perspiciatis numquam facere et ipsum. Aliquam in ipsam
+                  officiis ducimus!
                 </p>
                 <a href="#" class="btn btn-outline-primary">Download Now</a>
               </div>
@@ -139,22 +168,39 @@
           <div class="col-md-8" data-aos="zoom-in">
             <form>
               <div class="mb-3">
-                <input type="text" class="form-control" placeholder="Your Name" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Your Name"
+                  required
+                />
               </div>
               <div class="mb-3">
-                <input type="email" class="form-control" placeholder="Email Address" required />
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Email Address"
+                  required
+                />
               </div>
               <div class="mb-3">
-                <textarea class="form-control" rows="5" placeholder="Write Message Here." required></textarea>
+                <textarea
+                  class="form-control"
+                  rows="5"
+                  placeholder="Write Message Here."
+                  required
+                ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary w-100">Send Message</button>
+              <button type="submit" class="btn btn-primary w-100">
+                Send Message
+              </button>
             </form>
           </div>
         </div>
       </div>
     </section>
 
-    <footer class="footer bg-light py-3 text-center">
+    <footer class="footer py-3 text-center">
       <p>2025 Yssah Barcial, All Rights Reserved.</p>
       <a href="#home" class="btn btn-outline-secondary">
         <i class="ri-arrow-up-s-fill"></i>
