About Section set up

--- a/index.html
+++ b/index.html
@@ -78,35 +78,64 @@
       </div>
     </section>
 
-    <section class="about py-5 bg-white" id="about">
-      <div class="container">
+    <section class="about py-5" id="about">
+      <div class="container pt-5 mt-5">
         <div class="row align-items-center">
-          <div class="col-lg-6" data-aos="zoom-in-down">
-            <img src="./img/about.jpg" class="img-fluid rounded" />
+          <!-- Image Section with Rounded Frame and Border -->
+          <div
+            class="col-lg-6 mb-4 mb-lg-0 d-flex justify-content-center"
+            data-aos="zoom-in-down"
+          >
+            <div
+              class="border border-primary border-3 rounded-circle p-2"
+              style="width: 400px; height: 400px; overflow: hidden"
+            >
+              <img
+                src="./img/grad-pic2.jpg"
+                alt="About Image"
+                class="img-fluid rounded-circle w-400 h-400 object-fit-cover"
+              />
+            </div>
           </div>
+
+          <!-- Text Section -->
           <div class="col-lg-6" data-aos="zoom-in-up">
-            <h2>I am Product <span>Designer</span> & Web Developer</h2>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                Experience: <strong>12 Years</strong>
-              </li>
-              <li class="list-group-item">
-                Specialty: <strong>Product Designer, Developer</strong>
-              </li>
-              <li class="list-group-item">
-                Address: <strong>Quarry, Brgy. 9, Cabadbaran City</strong>
-              </li>
-              <li class="list-group-item">
-                Email: <strong>yjbarcial@gmail.com</strong>
-              </li>
-              <li class="list-group-item">
-                Phone: <strong>+63 956 382 9900</strong>
-              </li>
-              <li class="list-group-item">
-                Freelance: <strong>available</strong>
-              </li>
-            </ul>
-            <a href="#" class="btn btn-primary mt-3">View All Projects</a>
+            <h2 class="fw-bold mb-4">
+              I am a Web <span class="text-primary">Developer</span>!<br />
+            </h2>
+
+            <div class="exp-area fs-5">
+              <p class="mb-2">
+                <strong>Experience:</strong>
+                <span class="text-white-50">3 Years</span>
+              </p>
+              <p class="mb-2">
+                <strong>Specialty:</strong>
+                <span class="text-white-50">Web Designer, Developer</span>
+              </p>
+              <p class="mb-2">
+                <strong>Address:</strong>
+                <span class="text-white-50"
+                  >Quarry, Brgy. Problacion 9, Cabadbaran City</span
+                >
+              </p>
+              <p class="mb-2">
+                <strong>Email:</strong>
+                <span class="text-white-50">yjbarcial@gmail.com</span>
+              </p>
+              <p class="mb-2">
+                <strong>Phone:</strong>
+                <span class="text-white-50">0956 – 382 – 9900</span>
+              </p>
+              <p class="mb-4">
+                <strong>Freelance:</strong>
+                <span class="badge bg-success text-uppercase">Available</span>
+              </p>
+            </div>
+
+            <a href="#portfolio" class="btn btn-primary px-4 py-2 rounded-pill"
+              >View All Projects</a
+            >
           </div>
         </div>
       </div>
@@ -152,6 +181,152 @@
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 </p>
                 <a href="#" class="btn btn-outline-primary">Download Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="portfolio py-5" id="portfolio">
+      <div class="container">
+        <!-- Section Heading -->
+        <div class="text-center mb-5" data-aos="fade-down">
+          <h2 class="fw-bold">
+            My <span class="text-primary">Portfolio</span>
+          </h2>
+        </div>
+
+        <!-- Portfolio Grid -->
+        <div class="row g-4" data-aos="zoom-in-up">
+          <!-- Portfolio Item 1 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow-sm">
+              <img
+                src="./img/port-1.jpg"
+                class="card-img-top img-fluid"
+                alt="Portfolio 1"
+              />
+              <div class="card-body">
+                <div
+                  class="d-flex justify-content-between align-items-center mb-2"
+                >
+                  <h5 class="card-title mb-0">Website Design</h5>
+                  <a href="#"><i class="ri-github-fill fs-4 text-dark"></i></a>
+                </div>
+                <h6 class="card-subtitle text-muted">
+                  Website Development For Dark X
+                </h6>
+              </div>
+            </div>
+          </div>
+
+          <!-- Portfolio Item 2 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow-sm">
+              <img
+                src="./img/port-2.jpg"
+                class="card-img-top img-fluid"
+                alt="Portfolio 2"
+              />
+              <div class="card-body">
+                <div
+                  class="d-flex justify-content-between align-items-center mb-2"
+                >
+                  <h5 class="card-title mb-0">Website Design</h5>
+                  <a href="#"><i class="ri-github-fill fs-4 text-dark"></i></a>
+                </div>
+                <h6 class="card-subtitle text-muted">
+                  Website Development For Dark X
+                </h6>
+              </div>
+            </div>
+          </div>
+
+          <!-- Portfolio Item 3 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow-sm">
+              <img
+                src="./img/port-3.jpg"
+                class="card-img-top img-fluid"
+                alt="Portfolio 3"
+              />
+              <div class="card-body">
+                <div
+                  class="d-flex justify-content-between align-items-center mb-2"
+                >
+                  <h5 class="card-title mb-0">Website Design</h5>
+                  <a href="#"><i class="ri-github-fill fs-4 text-dark"></i></a>
+                </div>
+                <h6 class="card-subtitle text-muted">
+                  Website Development For Dark X
+                </h6>
+              </div>
+            </div>
+          </div>
+
+          <!-- Portfolio Item 4 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow-sm">
+              <img
+                src="./img/port-4.jpg"
+                class="card-img-top img-fluid"
+                alt="Portfolio 4"
+              />
+              <div class="card-body">
+                <div
+                  class="d-flex justify-content-between align-items-center mb-2"
+                >
+                  <h5 class="card-title mb-0">Website Design</h5>
+                  <a href="#"><i class="ri-github-fill fs-4 text-dark"></i></a>
+                </div>
+                <h6 class="card-subtitle text-muted">
+                  Website Development For Dark X
+                </h6>
+              </div>
+            </div>
+          </div>
+
+          <!-- Portfolio Item 5 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow-sm">
+              <img
+                src="./img/port-5.jpg"
+                class="card-img-top img-fluid"
+                alt="Portfolio 5"
+              />
+              <div class="card-body">
+                <div
+                  class="d-flex justify-content-between align-items-center mb-2"
+                >
+                  <h5 class="card-title mb-0">Website Design</h5>
+                  <a href="#"><i class="ri-github-fill fs-4 text-dark"></i></a>
+                </div>
+                <h6 class="card-subtitle text-muted">
+                  Website Development For Dark X
+                </h6>
+              </div>
+            </div>
+          </div>
+
+          <!-- Portfolio Item 6 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card border-0 shadow-sm">
+              <img
+                src="./img/port-6.jpg"
+                class="card-img-top img-fluid"
+                alt="Portfolio 6"
+              />
+              <div class="card-body">
+                <div
+                  class="d-flex justify-content-between align-items-center mb-2"
+                >
+                  <h5 class="card-title mb-0">Website Design</h5>
+                  <a href="#"><i class="ri-github-fill fs-4 text-dark"></i></a>
+                </div>
+                <h6 class="card-subtitle text-muted">
+                  Website Development For Dark X
+                </h6>
               </div>
             </div>
           </div>
