Edits on social links & Download CV btn

--- a/index.html
+++ b/index.html
@@ -65,15 +65,42 @@
           sed cupiditate accusantium, repellendus sit animi rerum.
         </p>
         <div class="social mb-5">
-          <a href="#"><i class="ri-facebook-fill"></i></a>
-          <a href="#"><i class="ri-instagram-fill"></i></a>
-          <a href="#"><i class="ri-twitter-fill"></i></a>
-          <a href="#"><i class="ri-youtube-fill"></i></a>
+          <a
+            href="https://www.facebook.com/yssxh/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="ri-facebook-fill"></i>
+          </a>
+
+          <a
+            href="https://www.instagram.com/yss.barcial/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="ri-instagram-fill"></i>
+          </a>
+
+          <a
+            href="https://github.com/yjbarcial"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="ri-github-fill"></i>
+          </a>
+
+          <a
+            href="https://www.linkedin.com/in/yssah-barcial-38739b349/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="ri-linkedin-fill"></i>
+          </a>
         </div>
 
         <div class="main-btn">
           <a href="#" class="btn">Hire me</a>
-          <a href="#" class="btn btn2">Download CV</a>
+          <a href="resume.pdf" class="btn btn2" download> Download CV </a>
         </div>
       </div>
     </section>
