Changed the look in About Section

--- a/index.html
+++ b/index.html
@@ -106,150 +106,139 @@
     </section>
 
     <!-- About Section -->
-    <div class="about py-5" id="about" data-aos="fade-up">
-      <div class="row">
-        <div class="col-6">
+    <div class="about d-flex" id="about" data-aos="fade-up">
+      <div class="container text-white pt-5">
+        <!-- Section Heading -->
+        <div class="text-center mb-5" data-aos="fade-in">
+          <h2 class="fw-bold"><span class="text-primary">About</span> Me</h2>
+        </div>
+        <div class="row align-items-center g-5">
           <!-- Image Section -->
-          <div class="mb-4 mb-md-0" data-aos="zoom-in-down">
+          <div
+            class="col-lg-4 text-center position-relative"
+            data-aos="zoom-in-down"
+          >
             <div
-              class="border border-primary border-3 rounded-circle p-2"
-              style="width: 300px; height: 300px; overflow: hidden"
+              class="border border-primary border-3 rounded-circle p-2 shadow-lg"
+              style="width: 400px; height: 400px; overflow: hidden"
             >
               <img
                 src="./img/grad-pic2.jpg"
-                alt="About Image"
+                alt="Profile Picture"
                 class="img-fluid rounded-circle w-100 h-100 object-fit-cover"
               />
             </div>
           </div>
 
-          <!-- Text/Information Section -->
-          <div class="" id="text" data-aos="zoom-in-up">
-            <h2 class="fw-bold mb-4 mt-4">
-              I am a Web <span class="text-primary">Developer</span>!
+          <!-- Bio Section -->
+          <div class="col-lg-8 ps-5" data-aos="zoom-in-up">
+            <h2 class="fw-semibold mb-3 text-white fs-3">
+              Hi, I'm <span class="text-primary">Yssah</span> — I build clean,
+              responsive, and user-friendly web applications.
             </h2>
-
-            <div class="exp-area fs-5">
-              <p class="mb-2">
-                <strong>Experience:</strong>
-                <span class="text-white-50">2 Years</span>
-              </p>
-              <p class="mb-2">
-                <strong>Specialty:</strong>
-                <span class="text-white-50">Web Designer, Developer</span>
-              </p>
-              <p class="mb-2">
-                <strong>Address:</strong>
-                <span class="text-white-50"
-                  >Quarry, Brgy. Problacion 9, Cabadbaran City</span
-                >
-              </p>
-              <p class="mb-2">
-                <strong>Email:</strong>
-                <span class="text-white-50">yjbarcial@gmail.com</span>
-              </p>
-              <p class="mb-2">
-                <strong>Phone:</strong>
-                <span class="text-white-50">0956 – 382 – 9900</span>
-              </p>
-              <p class="mb-4">
-                <strong>Freelance:</strong>
-                <span class="badge bg-success text-uppercase">Available</span>
-              </p>
+            <p class="fs-6 text-light fst-italic mb-4">
+              Coding with purpose, designing with passion.
+            </p>
+            <div class="row g-3">
+              <div class="col-md-6">
+                <ul class="list-unstyled fs-6 text-light">
+                  <li>
+                    <i class="bi bi-code-slash text-primary"></i>
+                    <strong>Experience:</strong> 2 Years
+                  </li>
+                  <li>
+                    <i class="bi bi-pencil-square text-primary"></i>
+                    <strong>Specialty:</strong> Web Design & Development
+                  </li>
+                  <li>
+                    <i class="bi bi-check-circle text-primary"></i>
+                    <strong>Freelance:</strong>
+                    <span class="text-success">Available</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <ul class="list-unstyled fs-6 text-light">
+                  <li>
+                    <i class="bi bi-envelope text-primary"></i>
+                    <strong>Email:</strong> yjbarcial@gmail.com
+                  </li>
+                  <li>
+                    <i class="bi bi-phone text-primary"></i>
+                    <strong>Phone:</strong> 0956 – 382 – 9900
+                  </li>
+                </ul>
+              </div>
             </div>
-
-            <a href="#portfolio" class="btn btn-primary px-4 py-2 rounded-pill">
-              View All Projects
-            </a>
+            <a href="#portfolio" class="btn btn2 ms-0 mt-3"
+              >Check Out My Work</a
+            >
           </div>
         </div>
 
-        <div class="col-6">
-          <!-- First Row: Academic Highlights and Training & Seminars Attended -->
-          <div class="row g-4 mt-5">
-            <div class="col-md-6" data-aos="fade-up">
-              <h5 class="fw-semibold text-white mb-3">Academic Highlights</h5>
-              <ul class="fs-5 text-light ps-3">
-                <li class="mb-3">
-                  <strong class="text-white"
-                    >Vice President for Academic Affairs’ Lister</strong
-                  ><br />
-                  <small class="text-light-emphasis"
-                    >Academic Year 2022-2023</small
-                  >
-                </li>
-                <li>
-                  <strong class="text-white">Dean’s Lister</strong><br />
-                  <small class="text-light-emphasis"
-                    >Academic Year 2023-2024</small
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-md-6" data-aos="fade-up">
-              <h5 class="fw-semibold text-white mb-3">
-                Training & Seminars Attended
-              </h5>
-              <ul class="fs-5 text-light ps-3">
-                <li class="mb-4">
-                  <strong class="text-white"
-                    >Generation Connect Philippines</strong
-                  ><br />
-                  <span class="text-light-emphasis"
-                    >Office of the Under Secretary for ICT Industry Development
-                    (OUIID)</span
-                  ><br />
-                  <small class="text-light-emphasis">October 2024</small>
-                </li>
-                <li>
-                  <strong class="text-white">Digital Careers Expo (DCE)</strong
-                  ><br />
-                  <span class="text-light-emphasis"
-                    >Department of Information and Communications Technology
-                    (DICT)</span
-                  ><br />
-                  <small class="text-light-emphasis">November 2024</small>
-                </li>
-              </ul>
-            </div>
+        <!-- Details Section -->
+        <div class="row g-5 mt-5">
+          <div class="col-lg-3" data-aos="fade-up">
+            <h3
+              class="fw-bold text-white fs-4 mb-3 border-start border-4 border-primary ps-3"
+            >
+              Education
+            </h3>
+            <p class="fs-6 text-light">
+              <strong>Bachelor of Science in Information System</strong><br />
+              <em>Caraga State University-Main Campus</em><br />
+              <small>2022 – 2026</small>
+            </p>
           </div>
-
-          <!-- Second Row: Educational Background and Club/Organization Affiliations -->
-          <div class="row g-4 mt-5">
-            <div class="col-md-6" data-aos="fade-up">
-              <h5 class="fw-semibold text-white mb-3">
-                Educational Background
-              </h5>
-              <ul class="fs-5 text-light ps-3">
-                <li>
-                  <strong class="text-white"
-                    >Bachelor of Science in Information System</strong
-                  ><br />
-                  <span class="text-light-emphasis"
-                    >Caraga State University-Main Campus</span
-                  ><br />
-                  <small class="text-light-emphasis"
-                    >2022 – 2026 | KM 7 NH1, Butuan City, 8600</small
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-md-6" data-aos="fade-up">
-              <h5 class="fw-semibold text-white mb-3">
-                Club/Organization Affiliations
-              </h5>
-              <ul class="fs-5 text-light ps-3">
-                <li>
-                  <strong class="text-white">Member</strong><br />
-                  <span class="text-light-emphasis"
-                    >Information Systems Society</span
-                  ><br />
-                  <small class="text-light-emphasis">2022 – Present</small>
-                </li>
-              </ul>
-            </div>
+          <div class="col-lg-3" data-aos="fade-up">
+            <h3
+              class="fw-bold text-white fs-4 mb-3 border-start border-4 border-primary ps-3"
+            >
+              Academic Achievements
+            </h3>
+            <p class="fs-6 text-light">
+              <strong>VP for Academic Affairs’ Lister</strong><br />
+              <em>AY 2022-2023</em>
+            </p>
+            <p class="fs-6 text-light">
+              <strong>Dean’s Lister</strong><br />
+              <em>AY 2023-2024</em>
+            </p>
+          </div>
+          <div class="col-lg-3" data-aos="fade-up">
+            <h3
+              class="fw-bold text-white fs-4 mb-3 border-start border-4 border-primary ps-3"
+            >
+              Club/Organization Affiliations
+            </h3>
+            <p class="fs-6 text-light">
+              <strong>Information Systems Society</strong><br />
+              <em>Member</em><br />
+              <small>2022 – Present</small>
+            </p>
+          </div>
+          <div class="col-lg-3" data-aos="fade-up">
+            <h3
+              class="fw-bold text-white fs-4 mb-3 border-start border-4 border-primary ps-3"
+            >
+              Training & Seminars Attended
+            </h3>
+            <p class="fs-6 text-light">
+              <strong>Generation Connect Philippines</strong><br />
+              <em
+                >Office of the Under Secretary for ICT Industry Development
+                (OUIID)</em
+              ><br />
+              <small>October 2024</small>
+            </p>
+            <p class="fs-6 text-light">
+              <strong>Digital Careers Expo (DCE)</strong><br />
+              <em
+                >Department of Information and Communications Technology
+                (DICT)</em
+              ><br />
+              <small>November 2024</small>
+            </p>
           </div>
         </div>
       </div>
@@ -257,8 +246,11 @@
 
     <!-- Certifications Section -->
     <section class="certifications py-5" id="certifications" data-aos="fade-up">
-      <div class="text-center mb-4">
-        <h3 class="fw-bold">Certifications</h3>
+      <!-- Section Heading -->
+      <div class="text-center mb-5" data-aos="fade-down">
+        <h2 class="fw-bold">
+          <span class="">Certifications</span>
+        </h2>
       </div>
       <div
         class="certificate-carousel position-relative d-flex justify-content-center align-items-center"
